# vscode-python-templates

./: README.md
data-science-template/: .gitignore  README.md  calculations.py  data_calculations.py  data_sample.py  revenue_visual.py
data-science-template/.github/: copilot-instructions.md
data-science-template/data/: data.csv
data-science-template/tests/: test_calculations.py
django-template/: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
django-template/.github/: copilot-instructions.md
django-template/hello/: forms.py  models.py  tests.py  urls.py  views.py
django-template/hello/migrations/: 0001_initial.py
django-template/web_django/: asgi.py  settings.py  urls.py  wsgi.py
fastapi-template/: .gitignore  README.md  main.py  models.py  pyproject.toml
fastapi-template/.github/: copilot-instructions.md
fastapi-template/tests/: test_main.py
flask-template/: .gitignore  README.md  app.py  pyproject.toml
flask-template/.github/: copilot-instructions.md
flask-template/static/: site.css
flask-template/templates/: about.html  base.html  home.html
flask-template/tests/: test_app.py
package-template/: .gitignore  README.md  dev-requirements.txt  pyproject.toml
package-template/.devcontainer/: devcontainer.json
package-template/.github/: copilot-instructions.md
package-template/my_package/: __main__.py
package-template/tests/: test_date_time.py  test_developer.py
script-template/: README.md  main.py  script.py
script-template/.github/: copilot-instructions.md
script-template/tests/: test_date_time.py
(+5 files in other folders)
